--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -20,7 +20,66 @@
 		<!--   SIDEBAR .//END   -->
 	</aside>
 	<main class="col-md-9">
-		<div class="col-md-9">
+           
+        <div class="page-content">
+            <div class="checkout">
+                <div class="container">
+                    <form action="{% url 'auth:userprofile' %}" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        
+                        <div class="container">
+                            {% if userprofile.profile_picture %}
+                            <img src=" {{userprofile.profile_picture.url}} " class="rounded" alt="Profile Picture" width="100">
+                            {% endif %}
+                            <div class="col-lg-12">
+                                <h2 class="checkout-title">Profile Details</h2><!-- End .checkout-title -->
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <label>Full Name *</label>
+                                        {{ user_form.full_name }}
+                                    </div><!-- End .col-sm-6 -->
+                                    <div class="col-sm-4">
+                                        <label>Phone Number *</label>
+                                        {{ user_form.phone_number }}
+                                    </div><!-- End .col-sm-6 -->
+                                </div><!-- End .row -->
+                                <div class="col-sm-4">
+                                    <label>Profile Picture *</label>
+                                    {{ profile_form.profile_picture }}
+                                </div><!-- End .col-sm-6 -->
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <label>Address Line *</label>
+                                        {{ profile_form.address_line }}
+                                    </div><!-- End .col-sm-6 -->
+                                    <div class="col-sm-4">
+                                        <label>Province *</label>
+                                        {{ profile_form.province }}
+                                    </div><!-- End .col-sm-6 -->
+                                </div><!-- End .row -->
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <label>City *</label>
+                                        {{ profile_form.city }}
+                                    </div><!-- End .col-sm-6 -->
+                                    <div class="col-sm-4">
+                                        <label>District *</label>
+                                        {{ profile_form.district }}
+                                    </div><!-- End .col-sm-6 -->
+                                </div><!-- End .row -->
+                                <div class="row">
+                                    <div class="col-sm-2">
+                                        <button type="submit" class="btn btn-primary btn-block"> Update  </button>
+                                    </div><!-- End .col-sm-6 -->
+                                </div> <!-- row// -->
+                                    
+                            </div><!-- End .col-lg-12 -->
+                        </div><!-- End .row -->
+                    </form>
+                </div><!-- End .container -->
+            </div><!-- End .checkout -->
+        </div><!-- End .page-content -->
+		<!-- <div class="col-md-9">
             <div class="row">
 
                 <div class="col-md-6">
@@ -47,7 +106,7 @@
                 </div>
                 
             </div>
-        </div>
+        </div> -->
 	</main>
 </div> <!-- row.// -->
 </div>
