--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -21,15 +21,13 @@
     <div class="page-content">
         <div class="checkout">
             <div class="container">
-                <form action="{% url 'auth:userprofile' %}" method="get" enctype="multipart/form-data">
+                <form action="{% url 'auth:userprofile' %}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
                     <div class="row">
                         <div>
                             <img src=" {{userprofile.profile_picture.url}} " alt="Profile Picture" width="100" style="border-radius: 80%;">
                         </div>
-                        <div>
-                            <a href="{% url 'auth:editprofile' %}" class="btn btn-xs btn-warning"><i class="fas fa-user-edit"></i></a>
-
-                        </div>
+                       
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
@@ -64,6 +62,11 @@
                                     {{ profile_form.district }}
                                 </div><!-- End .col-sm-6 -->
                             </div><!-- End .row -->
+                            <div class="row">
+                                <div class="col-sm-2">
+                                    <button type="submit" class="btn btn-primary btn-block"> Save  </button>
+                                </div><!-- End .col-sm-6 -->
+                            </div> <!-- row// -->
                                 <div class="row">
                                     <div class="col-sm-2">
                                         <a  href="{% url 'store:store' %}" class="btn btn-primary btn-block"> Back  </a>
