--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -1,122 +1,72 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 
 <div class="container">
-	<div class="row">
-	<aside class="col-md-3">
-		<!--   SIDEBAR   -->
-		<ul class="list-group">
-
-			<a class="list-group-item" href="{% url 'auth:userprofile' %}"> Profile </a>
-			<a class="list-group-item" href="#"> My order history </a>
-			<a class="list-group-item" href="#"> Transactions </a>
-			<!-- <a class="list-group-item" href="#"> Return and refunds </a> -->
-			<a class="list-group-item" href="#">Settings </a>
-			<!-- <a class="list-group-item" href="#"> My Selling Items </a> -->
-			<!-- <a class="list-group-item" href="#"> Received orders </a> -->
-		</ul>
-		<br>
-		<!--   SIDEBAR .//END   -->
-	</aside>
-	<main class="col-md-9">
-           
-        <div class="page-content">
-            <div class="checkout">
-                <div class="container">
-                    <form action="{% url 'auth:userprofile' %}" method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        
-                        <div class="container">
-                            {% if userprofile.profile_picture %}
-                            <img src=" {{userprofile.profile_picture.url}} " class="rounded" alt="Profile Picture" width="100">
-                            {% endif %}
-                            <div class="col-lg-12">
-                                <h2 class="checkout-title">Profile Details</h2><!-- End .checkout-title -->
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <label>Full Name *</label>
-                                        {{ user_form.full_name }}
-                                    </div><!-- End .col-sm-6 -->
-                                    <div class="col-sm-4">
-                                        <label>Phone Number *</label>
-                                        {{ user_form.phone_number }}
-                                    </div><!-- End .col-sm-6 -->
-                                </div><!-- End .row -->
-                                <div class="col-sm-4">
-                                    <label>Profile Picture *</label>
-                                    {{ profile_form.profile_picture }}
-                                </div><!-- End .col-sm-6 -->
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <label>Address Line *</label>
-                                        {{ profile_form.address_line }}
-                                    </div><!-- End .col-sm-6 -->
-                                    <div class="col-sm-4">
-                                        <label>Province *</label>
-                                        {{ profile_form.province }}
-                                    </div><!-- End .col-sm-6 -->
-                                </div><!-- End .row -->
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <label>City *</label>
-                                        {{ profile_form.city }}
-                                    </div><!-- End .col-sm-6 -->
-                                    <div class="col-sm-4">
-                                        <label>District *</label>
-                                        {{ profile_form.district }}
-                                    </div><!-- End .col-sm-6 -->
-                                </div><!-- End .row -->
-                                <div class="row">
-                                    <div class="col-sm-2">
-                                        <button type="submit" class="btn btn-primary btn-block"> Update  </button>
-                                    </div><!-- End .col-sm-6 -->
-                                </div> <!-- row// -->
-                                    
-                            </div><!-- End .col-lg-12 -->
-                        </div><!-- End .row -->
-                    </form>
-                </div><!-- End .container -->
-            </div><!-- End .checkout -->
-        </div><!-- End .page-content -->
-		<!-- <div class="col-md-9">
-            <div class="row">
-
-                <div class="col-md-6">
-                    <div class="card"style="
-                    background-color: beige;
-                ">
-                        <div class="card-body">
-                            <h5 class="card-title">Total Orders</h5>
-                            <h4>100</h4>
-                            <a href="">View Orders</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card"style="
-                    background-color: aliceblue;
-                ">
-                        <div class="card-body">
-                            <h5 class="card-title">Total Orders</h5>
-                            <h4>100</h4>
-                            <a href="">View Orders</a>
-                        </div>
-                    </div>
-                </div>
-                
+  <div class="row">
+    <aside class="col-md-3">
+      <!--   SIDEBAR   -->
+      <ul class="list-group">
+        <a class="list-group-item profile" href="#"> Profile </a>
+        <a class="list-group-item orders" href="#"> My order history </a>
+        <a class="list-group-item" href="#"> Transactions </a>
+        <a class="list-group-item" href="#">Settings </a>
+      </ul>
+      <br />
+      <!--   SIDEBAR .//END   -->
+    </aside>
+    <main class="col-md-9 mainone">
+      <!-- End .page-content -->
+      <div class="col-md-9">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card" style="background-color: beige">
+              <div class="card-body">
+                <h5 class="card-title">Total Orders</h5>
+                <h4>100</h4>
+                <a href="">View Orders</a>
+              </div>
             </div>
-        </div> -->
-	</main>
-</div> <!-- row.// -->
+          </div>
+          <div class="col-md-6">
+            <div class="card" style="background-color: aliceblue">
+              <div class="card-body">
+                <h5 class="card-title">Total Orders</h5>
+                <h4>100</h4>
+                <a href="">View Orders</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+  <!-- row.// -->
 </div>
 
-{% endblock content%}
-{% block javascript %} 
-   <script type="application/javascript">
-       setTimeout(function(){
-       $('#message').fadeOut('medium')
-   }, 2500)
-   </script>
-   
+{% endblock content%} {% block javascript %}
+<script type="application/javascript">
+  setTimeout(function () {
+    $("#message").fadeOut("medium");
+  }, 2500);
+</script>
+
+<script>
+  $(document).on("click", ".profile", function (event) {
+    $.ajax({
+      url: "{% url 'auth:userprofile' %}",
+      success: function (data) {
+        $(".mainone").html(data);
+      },
+    });
+  });
+
+  $(document).on("click", ".orders", function (event) {
+    $.ajax({
+      url: "{% url 'auth:orders' %}",
+      success: function (data) {
+        $(".mainone").html(data);
+      },
+    });
+  });
+</script>
+
 {% endblock javascript %}>
