--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -27,14 +27,9 @@
                         <div class="col-lg-9">
                             <h2 class="checkout-title">Billing Details</h2><!-- End .checkout-title -->
                             <div class="row">
-                                <div class="col-sm-6">
-                                    <label>First Name *</label>
-                                    <input type="text" name="first_name" class="form-control" required>
-                                </div><!-- End .col-sm-6 -->
-
-                                <div class="col-sm-6">
-                                    <label>Last Name *</label>
-                                    <input type="text" name="last_name" class="form-control" required>
+                                <div class="col-sm-12">
+                                    <label>Full Name *</label>
+                                    <input type="text" name="full_name" class="form-control" required>
                                 </div><!-- End .col-sm-6 -->
                             </div><!-- End .row -->
                             <div class="row">
