--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -64,13 +64,14 @@
                             </div><!-- End .row -->
                             <div class="row">
                                 <div class="col-sm-2">
-                                    <button type="submit" class="btn btn-primary btn-block"> Save  </button>
+                                    <button type="submit" class="btn btn-success"> Save  </button>
+                                </div><!-- End .col-sm-6 -->
+                                <div class="col-sm-2">
+                                    <a  href="{% url 'store:store' %}" class="btn btn-primary btn-block"> Back  </a>
                                 </div><!-- End .col-sm-6 -->
                             </div> <!-- row// -->
                                 <div class="row">
-                                    <div class="col-sm-2">
-                                        <a  href="{% url 'store:store' %}" class="btn btn-primary btn-block"> Back  </a>
-                                    </div><!-- End .col-sm-6 -->
+                                    
                                 </div> <!-- row// -->
                         </div><!-- End .col-lg-12 -->
                     </div><!-- End .row -->
