--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -92,7 +92,7 @@
                             </a>
 
                             <div class="banner-content">
-                                <h4 class="banner-subtitle">Smart Offer</h4><!-- End .banner-subtitle -->
+                                <h4 class="banner-subtitle">{{i.offer_name}}</h4><!-- End .banner-subtitle -->
                                 <h3 class="banner-title">{{i.offer_description}} <strong>on <br> {{i.product}}</strong></h3><!-- End .banner-title -->
                                 <a href="{{i.product.get_url }}" class="banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
                             </div><!-- End .banner-content -->
