--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -63,7 +63,7 @@
               </li>
               {% else %}
               <div class="dropdown">
-                <a href="#">Welcome {{user.full_name}}! <i class="fas fa-chevron-circle-down"></i></a>
+                Welcome  <a href="#"> <span>{{user.full_name}}</span> <i class="fas fa-chevron-circle-down"></i></a>
                 <div class="dropdown-content">
                   <a href="{% url 'auth:dashboard' %}">Dashboard</a>
                   <a href="{% url 'auth:logout' %}">Logout</a>
