--- a/store/templates/store/product-detail.html
+++ b/store/templates/store/product-detail.html
@@ -75,28 +75,21 @@
                             </div><!-- End .rating-container -->
 
                             <div class="product-price">
-                                $84.00
+                                {{single_product.price}}
                             </div><!-- End .product-price -->
-
-                            <div class="product-content">
-                                <p>{{single_product.description}}</p>
-                            </div><!-- End .product-content -->
-
-                            
-                            
-
-                            
+                        
                             <div class="product-details-action">
-                                {% if single_product.stock <= 0 %} <span>Out of stock</span>
-                                    {% else %}
+                                {% if single_product.stock <= 0 %} 
+                                    <span>Out of stock</span>
+                                {% else %}
                                     {% if in_cart %}
-                                    <a href="#" class="btn-product btn-cart"><span>added to cart</span></a>
+                                        <a href="#" class="btn-product btn-cart"><span>added to cart</span></a>
 
                                     {% else %}
-                                    <a href="{% url 'cart:add_cart' single_product.id %}"
+                                        <a href="{% url 'cart:add_cart' single_product.id %}"
                                         class="btn-product btn-cart"><span>add to cart</span></a>
                                     {% endif %}
-                                    {% endif %}
+                                {% endif %}
 
                                     <div class="details-action-wrapper">
                                         <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add
@@ -142,7 +135,11 @@
                         aria-labelledby="product-desc-link">
                         <div class="product-desc-content">
                             <h3>Product Information</h3>
-                            <p>{{single_product.description}} </p>
+                            {% if single_product.description %}
+                                <p>{{single_product.description}}</p>
+                            {% else %}
+                                <p>NO Description Information Added</p>
+                            {% endif %}
                             
                         </div><!-- End .product-desc-content -->
                     </div><!-- .End .tab-pane -->
@@ -154,7 +151,7 @@
                             <p>We deliver to over 100 countries around the world. For full details of the
                                 delivery options we offer, please view our <a href="#">Delivery
                                     information</a><br>
-                                We hope you’ll love every purchase, but if you ever need to return an item you
+                                We hope you'll love every purchase, but if you ever need to return an item you
                                 can do so within a month of receipt. For full details of how to make a return,
                                 please view our <a href="#">Returns information</a></p>
                         </div><!-- End .product-desc-content -->
@@ -169,7 +166,7 @@
                                         <h4><a href="#">Samanta J.</a></h4>
                                         <div class="ratings-container">
                                             <div class="ratings">
-                                                <div class="ratings-val" style="width: 80%;"></div>
+                                                <div class="ratings-val" style="width: 80%;">{{single_product.ratings}}</div>
                                                 <!-- End .ratings-val -->
                                             </div><!-- End .ratings -->
                                         </div><!-- End .rating-container -->
@@ -225,11 +222,13 @@
                                 }
                             }
                         }'>
+                {% if products %}
+                {% for product in products %}
                 <div class="product product-7 text-center">
                     <figure class="product-media">
                         <span class="product-label label-new">New</span>
-                        <a href="product.html">
-                            <img src="assets/images/products/product-4.jpg" alt="Product image" class="product-image">
+                        <a href="{{product.get_url }}">
+                            <img src="{{product.image.url}}" alt="Product image" class="product-image">
                         </a>
 
                         <div class="product-action-vertical">
@@ -249,10 +248,9 @@
                         <div class="product-cat">
                             <a href="#">Women</a>
                         </div><!-- End .product-cat -->
-                        <h3 class="product-title"><a href="product.html">Brown paperbag waist <br>pencil
-                                skirt</a></h3><!-- End .product-title -->
+                        <h3 class="product-title"><a href="{{product.get_url }}"> <br>{{ product.name }}</a></h3><!-- End .product-title -->
                         <div class="product-price">
-                            $60.00
+                            ${{product.price}}
                         </div><!-- End .product-price -->
                         <div class="ratings-container">
                             <div class="ratings">
@@ -263,181 +261,20 @@
 
                         <div class="product-nav product-nav-thumbs">
                             <a href="#" class="active">
-                                <img src="assets/images/products/product-4-thumb.jpg" alt="product desc">
+                                <img src="{% static 'assets/images/products/product-4-thumb.jpg' %}" alt="product desc">
                             </a>
                             <a href="#">
-                                <img src="assets/images/products/product-4-2-thumb.jpg" alt="product desc">
+                                <img src="{% static 'assets/images/products/product-4-2-thumb.jpg' %}" alt="product desc">
                             </a>
 
                             <a href="#">
-                                <img src="assets/images/products/product-4-3-thumb.jpg" alt="product desc">
+                                <img src="{% static 'assets/images/products/product-4-3-thumb.jpg' %}" alt="product desc">
                             </a>
                         </div><!-- End .product-nav -->
                     </div><!-- End .product-body -->
                 </div><!-- End .product -->
-
-                <div class="product product-7 text-center">
-                    <figure class="product-media">
-                        <span class="product-label label-out">Out of Stock</span>
-                        <a href="product.html">
-                            <img src="assets/images/products/product-6.jpg" alt="Product image" class="product-image">
-                        </a>
-
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to
-                                    wishlist</span></a>
-                            <a href="popup/quickView.html" class="btn-product-icon btn-quickview"
-                                title="Quick view"><span>Quick view</span></a>
-                            <a href="#" class="btn-product-icon btn-compare" title="Compare"><span>Compare</span></a>
-                        </div><!-- End .product-action-vertical -->
-
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                        </div><!-- End .product-action -->
-                    </figure><!-- End .product-media -->
-
-                    <div class="product-body">
-                        <div class="product-cat">
-                            <a href="#">Jackets</a>
-                        </div><!-- End .product-cat -->
-                        <h3 class="product-title"><a href="product.html">Khaki utility boiler jumpsuit</a></h3>
-                        <!-- End .product-title -->
-                        <div class="product-price">
-                            <span class="out-price">$120.00</span>
-                        </div><!-- End .product-price -->
-                        <div class="ratings-container">
-                            <div class="ratings">
-                                <div class="ratings-val" style="width: 80%;"></div><!-- End .ratings-val -->
-                            </div><!-- End .ratings -->
-                            <span class="ratings-text">( 6 Reviews )</span>
-                        </div><!-- End .rating-container -->
-                    </div><!-- End .product-body -->
-                </div><!-- End .product -->
-
-                <div class="product product-7 text-center">
-                    <figure class="product-media">
-                        <span class="product-label label-top">Top</span>
-                        <a href="product.html">
-                            <img src="assets/images/products/product-11.jpg" alt="Product image" class="product-image">
-                        </a>
-
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to
-                                    wishlist</span></a>
-                            <a href="popup/quickView.html" class="btn-product-icon btn-quickview"
-                                title="Quick view"><span>Quick view</span></a>
-                            <a href="#" class="btn-product-icon btn-compare" title="Compare"><span>Compare</span></a>
-                        </div><!-- End .product-action-vertical -->
-
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                        </div><!-- End .product-action -->
-                    </figure><!-- End .product-media -->
-
-                    <div class="product-body">
-                        <div class="product-cat">
-                            <a href="#">Shoes</a>
-                        </div><!-- End .product-cat -->
-                        <h3 class="product-title"><a href="product.html">Light brown studded Wide fit wedges</a>
-                        </h3><!-- End .product-title -->
-                        <div class="product-price">
-                            $110.00
-                        </div><!-- End .product-price -->
-                        <div class="ratings-container">
-                            <div class="ratings">
-                                <div class="ratings-val" style="width: 80%;"></div><!-- End .ratings-val -->
-                            </div><!-- End .ratings -->
-                            <span class="ratings-text">( 1 Reviews )</span>
-                        </div><!-- End .rating-container -->
-
-                        <div class="product-nav product-nav-thumbs">
-                            <a href="#" class="active">
-                                <img src="assets/images/products/product-11-thumb.jpg" alt="product desc">
-                            </a>
-                            <a href="#">
-                                <img src="assets/images/products/product-11-2-thumb.jpg" alt="product desc">
-                            </a>
-
-                            <a href="#">
-                                <img src="assets/images/products/product-11-3-thumb.jpg" alt="product desc">
-                            </a>
-                        </div><!-- End .product-nav -->
-                    </div><!-- End .product-body -->
-                </div><!-- End .product -->
-
-                <div class="product product-7 text-center">
-                    <figure class="product-media">
-                        <a href="product.html">
-                            <img src="assets/images/products/product-10.jpg" alt="Product image" class="product-image">
-                        </a>
-
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to
-                                    wishlist</span></a>
-                            <a href="popup/quickView.html" class="btn-product-icon btn-quickview"
-                                title="Quick view"><span>Quick view</span></a>
-                            <a href="#" class="btn-product-icon btn-compare" title="Compare"><span>Compare</span></a>
-                        </div><!-- End .product-action-vertical -->
-
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                        </div><!-- End .product-action -->
-                    </figure><!-- End .product-media -->
-
-                    <div class="product-body">
-                        <div class="product-cat">
-                            <a href="#">Jumpers</a>
-                        </div><!-- End .product-cat -->
-                        <h3 class="product-title"><a href="product.html">Yellow button front tea top</a></h3>
-                        <!-- End .product-title -->
-                        <div class="product-price">
-                            $56.00
-                        </div><!-- End .product-price -->
-                        <div class="ratings-container">
-                            <div class="ratings">
-                                <div class="ratings-val" style="width: 0%;"></div><!-- End .ratings-val -->
-                            </div><!-- End .ratings -->
-                            <span class="ratings-text">( 0 Reviews )</span>
-                        </div><!-- End .rating-container -->
-                    </div><!-- End .product-body -->
-                </div><!-- End .product -->
-
-                <div class="product product-7 text-center">
-                    <figure class="product-media">
-                        <a href="product.html">
-                            <img src="assets/images/products/product-7.jpg" alt="Product image" class="product-image">
-                        </a>
-
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to
-                                    wishlist</span></a>
-                            <a href="popup/quickView.html" class="btn-product-icon btn-quickview"
-                                title="Quick view"><span>Quick view</span></a>
-                            <a href="#" class="btn-product-icon btn-compare" title="Compare"><span>Compare</span></a>
-                        </div><!-- End .product-action-vertical -->
-
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                        </div><!-- End .product-action -->
-                    </figure><!-- End .product-media -->
-
-                    <div class="product-body">
-                        <div class="product-cat">
-                            <a href="#">Jeans</a>
-                        </div><!-- End .product-cat -->
-                        <h3 class="product-title"><a href="product.html">Blue utility pinafore denim dress</a>
-                        </h3><!-- End .product-title -->
-                        <div class="product-price">
-                            $76.00
-                        </div><!-- End .product-price -->
-                        <div class="ratings-container">
-                            <div class="ratings">
-                                <div class="ratings-val" style="width: 20%;"></div><!-- End .ratings-val -->
-                            </div><!-- End .ratings -->
-                            <span class="ratings-text">( 2 Reviews )</span>
-                        </div><!-- End .rating-container -->
-                    </div><!-- End .product-body -->
-                </div><!-- End .product -->
+                {% endfor %}
+                {% endif %}
             </div><!-- End .owl-carousel -->
         </div><!-- End .container -->
     </div><!-- End .page-content -->
