--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -29,7 +29,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <label>Full Name *</label>
-                                    <input type="text" name="full_name" class="form-control" required>
+                                    <input type="text" name="name" class="form-control" required>
                                 </div><!-- End .col-sm-6 -->
                             </div><!-- End .row -->
                             <div class="row">
