--- a/orders/templates/orders/payments.html
+++ b/orders/templates/orders/payments.html
@@ -120,6 +120,12 @@
                                             </a>
                                         </h2>
                                     </div><!-- End .card-header -->
+                                    <div class="card-header">
+                                        <h2 class="card-title">
+                                            <button id="payment-button">Pay with Khalti</button>
+
+                                        </h2>
+                                    </div><!-- End .card-header -->
 
                                 </div><!-- End .card -->
 
@@ -168,7 +174,7 @@
     var redirect_url = "{% url 'orders:order_complete' %}"
 
     function sendData() {
-        
+
         fetch(url, {
             method: "POST",
             headers: {
@@ -190,6 +196,42 @@
 
 
 
+</script>
+
+<script>
+    var config = {
+        // replace the publicKey with yours
+        "publicKey": "test_public_key_efca9926e4864d1b8e684f00fcce9506",
+        "productIdentity": "1234567890",
+        "productName": "Dragon",
+        "productUrl": "http://gameofthrones.wikia.com/wiki/Dragons",
+        "paymentPreference": [
+            "KHALTI",
+            "EBANKING",
+            "MOBILE_BANKING",
+            "CONNECT_IPS",
+            "SCT",
+        ],
+        "eventHandler": {
+            onSuccess(payload) {
+                // hit merchant api for initiating verfication
+                console.log(payload);
+            },
+            onError(error) {
+                console.log(error);
+            },
+            onClose() {
+                console.log('widget is closing');
+            }
+        }
+    };
+    var total= {{ grand_total }} *100
+    var checkout = new KhaltiCheckout(config);
+    var btn = document.getElementById("payment-button");
+    btn.onclick = function () {
+        // minimum transaction amount must be 10, i.e 1000 in paisa.
+        checkout.show({ amount: total });
+    }
 </script>
 
 {% endblock javascript %}
