--- a/templates/modal/signin.html
+++ b/templates/modal/signin.html
@@ -50,7 +50,7 @@
                                                 Me</label>
                                         </div><!-- End .custom-checkbox -->
 
-                                        <a href="#" class="forgot-link">Forgot Your Password?</a>
+                                        <a href="{% url 'auth:forgotPassword' %}" class="forgot-link">Forgot Your Password?</a>
                                     </div><!-- End .form-footer -->
                                 </form>
                                 <div class="form-choice">
