admin part modified

--- a/store/templates/store/product-detail.html
+++ b/store/templates/store/product-detail.html
@@ -109,7 +109,7 @@
                                         <a href="#" class="btn-product btn-cart"><span>added to cart</span></a>
 
                                     {% else %}
-                                        <a href="{% url 'cart:add_cart' single_product.id %}"
+                                        <a href="#"
                                         class="btn-product btn-cart"><span>add to cart</span></a>
                                     {% endif %}
                                 {% endif %}
