--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -5,8 +5,8 @@
             <div class="row">
                 <div class="col-sm-6 col-lg-3">
                     <div class="widget widget-about">
-                        <!-- <img src="{% static 'assets/images/demos/demo-4/logo-footer.png ' %}" class="footer-logo" alt="Footer Logo" width="105" height="25"> -->
-                        <h3>Smart Baje</h3>
+                        <img src="{% static 'assets/images/smart_deals_nepal_logo.png' %}" class="footer-logo" alt="Footer Logo" width="165px" height="75px">
+                        <!-- <h3>Smart Baje</h3> -->
                         <p>contains description About e-commerce site</p>
 
                         <div class="widget-call">
