--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -90,8 +90,7 @@
         </button>
 
         <a href="{% url 'store:store' %}" class="logo">
-          <!-- <img src="{% static 'assets/images/demos/demo-4/logo.png' %}" alt="Molla Logo" width="105" height="25"> -->
-          <h3 style="margin-top: 8px">Smart Baje</h3>
+          <img src="{% static 'assets/images/smart_deals_nepal_logo.png' %}" alt="Smart Deals Nepal Logo" width="160px" height="40px">
         </a>
       </div>
       <!-- End .header-left -->
