--- a/store/templates/store/product-detail.html
+++ b/store/templates/store/product-detail.html
@@ -270,12 +270,15 @@
                                 <div class="product-price">
                                     ${{product.price}}
                                 </div><!-- End .product-price -->
-                                <div class="ratings-container">
+                                <!-- <div class="ratings-container">
                                     <div class="ratings">
-                                        <div class="ratings-val" style="width: 100%;"></div><!-- End .ratings-val -->
-                                    </div><!-- End .ratings -->
-                                <span class="ratings-text">( 6 Reviews )</span>
-                                </div><!-- End .rating-container -->
+                                        <div class="ratings-val" style="width: 100%;"></div> -->
+                                        <!-- End .ratings-val -->
+                                    <!-- </div> -->
+                                    <!-- End .ratings -->
+                                <!-- <span class="ratings-text">( 6 Reviews )</span> -->
+                                <!-- </div> -->
+                                <!-- End .rating-container -->
                             </div><!-- End .product-body -->
                         </div><!-- End .product -->
                         {% endfor %}
