--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -54,8 +54,8 @@
                             <li><a href="#">Sign Out</a></li>
                             {% endif %}
                             <li><a href="cart.html">View Cart</a></li>
-                            <li><a href="#">My Wishlist</a></li>
-                            <li><a href="#">Track My Order</a></li>
+                            <!-- <li><a href="#">My Wishlist</a></li>
+                            <li><a href="#">Track My Order</a></li> -->
                             <li><a href="#">Help</a></li>
                         </ul><!-- End .widget-list -->
                     </div><!-- End .widget -->
