--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -129,7 +129,7 @@
       <div class="header-right">
         <!-- End .compare-dropdown -->
 
-        <div class="wishlist">
+        <!-- <div class="wishlist">
           <a href="wishlist.html" title="Wishlist">
             <div class="icon">
               <i class="icon-heart-o"></i>
@@ -137,7 +137,7 @@
             </div>
             <p>Wishlist</p>
           </a>
-        </div>
+        </div> -->
         <!-- End .compare-dropdown -->
 
         <div class="dropdown cart-dropdown">
